...
            }
        }
    }

    func createSessionButton() {
        let button = UIButton(type: .system)
        button.setTitle("Create Session", for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.backgroundColor = .systemBlue
        button.layer.cornerRadius = 10

        self.view.addSubview(button)
        button.translatesAutoresizingMaskIntoConstraints = false
...

        button.addTarget(self, action: #selector(getChallengeResult), for: .touchUpInside)
    }

    func clearButton() {
        let button = UIButton(type: .system)
        button.setTitle("Clear", for: .normal)
        button.setTitleColor(.white, for: .normal)
        button.backgroundColor = .systemBlue
        button.layer.cornerRadius = 10

        self.view.addSubview(button)
        button.translatesAutoresizingMaskIntoConstraints = false
...

    func tokenIdInputField() {
        let textField: UITextField = {
            let tf = UITextField()
            tf.inputView = UIView()
            tf.borderStyle = .roundedRect
            tf.placeholder = "Token ID"
            tf.translatesAutoresizingMaskIntoConstraints = false
            return tf
        }()

        textField.delegate = self

...
